forgot password controller form updates

--- a/src/main/resources/templates/changePasswordForm.html
+++ b/src/main/resources/templates/changePasswordForm.html
@@ -12,8 +12,8 @@
         <span>Enter Your Password: </span>
         <input type="text" name="password"/>
     </label>
-    <input type="hidden" name ="userId" th:value="${userId}"/>
-
+    <input type="hidden" name="userId" th:value="${userId}"/>
+    <input type="hidden" name="email" th:value="${email}"/>
     <button>Submit</button>
 
 </form>
