--- a/src/main/resources/templates/forgotPasswordForm.html
+++ b/src/main/resources/templates/forgotPasswordForm.html
@@ -10,10 +10,10 @@
     <fieldset>
         <legend>Find Your Account</legend>
         <label for="searchEmail">
-            Please enter your email address <input type="text" id="searchEmail" name="email" value=""/>
+            Please enter your email address <input type="email" id="searchEmail" name="email" value=""/>
         </label>
     </fieldset>
-    <button>Search</button>
+    <button>Submit</button>
 </form>
 
 
