--- a/src/main/resources/static/css/style.scss
+++ b/src/main/resources/static/css/style.scss
@@ -19,7 +19,7 @@ $accent:#ececec; //off white for background
 body {
   font-size: 16px;
   line-height: 1.4;
-  font-family: sans-serif;
+  font-family: 'Signika', sans-serif;
   color: #333;
   background: $accent;
 }
@@ -66,6 +66,7 @@ a {
 }
 
 button {
+  font-family: 'Signika', sans-serif;
   cursor: pointer;
   display: block;
   margin: 15px auto;
