--- a/src/main/resources/templates/parent.html
+++ b/src/main/resources/templates/parent.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Teacher Talk</title>
-
+    <link th:href="@{https://fonts.googleapis.com/css?family=Signika:300,400,700}" href="https://fonts.googleapis.com/css?family=Signika:300,400,700" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/normalize.css}" href="../static/css/normalize.css"/>
     <link rel="stylesheet" th:href="@{/css/style.css}" href="../static/css/style.css"/>
 </head>
@@ -49,7 +49,7 @@
 
           <div class="input-wrapper">
             <input type="text" id="registerPrimaryFirstName" name="registerPrimaryFirstName" th:value="${parent.getPrimaryFirstName()}" required="required"/>
-            <label for="registerPrimaryFirstName">First Name </label>
+            <label for="registerPrimaryFirstName">First Name*</label>
           </div>
           <div class="input-wrapper">
             <input type="text" id="registerPrimaryLastName" name="registerPrimaryLastName" th:value="${parent.getPrimaryLastName()}" required="required" />
@@ -148,14 +148,21 @@
           </div>
           <aside class="border-seperation"></aside>
 
-          <!-- <legend>Preferred Contact Method</legend>
+          <legend>Preferred Contact Method</legend>
           <select name = "preferredContactMethod">
-            <option value=""></option>
-            <option value="phone" th:value="${parent.getPreferredContactMethod()}">Phone</option>
-            <option value="text">Text</option>
+            <option value="">Select Method</option>
+            <option value="text" th:value="${parent.getPreferredContactMethod()}">Text</option>
             <option value="email">Email</option>
             <option value="both">Both</option>
-          </select> -->
+          </select>
+          <select name="">
+            <option value="">Select Phone Carrier</option>
+            <option value="AT&amp;T">AT&amp;T</option>
+            <option value="Sprint">Sprint</option>
+            <option value="T-Mobile">T-Mobile</option>
+            <option value="Verizon">Verizon</option>
+          </select>
+          <aside class="border-seperation"></aside>
 
         </fieldset>
         <button type="submit" class="update">Register</button>
